# uav-emergency-rescue-bds

./: .gitignore  BDS_SMC2_Action_Items.md  BDS_SMC2_Gaps_Slide.html  BDS_SMC2_Node_Evaluation.md  BDS_SMC2_Paper1_Draft.md  BDS_SMC2_Paper1_Sections.md  CONTRIBUTING.md  INTEGRATION_2DAY_PLAN.md  LEVEL3_NEXT_STEPS.md  Lab7_Report.md  PHASE3_RTKLIB_PLAN.md  README.md  SETUP_CHECKLIST.md  generate_brief.py  generate_collection_directive.py  generate_directive.py  generate_field_sheet.py  generate_figures.py  generate_gap_table.py  generate_paper_plan.py  generate_presentation.py  generate_progress_report.py  generate_report.py  run_gap2.bat  run_gap2_evening.bat  run_gap2_midday.bat  run_gap2_morning.bat  run_in1.bat  run_in2.bat  run_in3.bat  run_lc1.bat  run_lc2.bat  run_lc3.bat  run_level1.sh  run_level2.sh  run_level3.sh  run_os1.bat  run_os2.bat  run_os3.bat  run_uc1.bat  (+3 more)
config/: beidou_message_formats.yaml  rtk_base_config.yaml  rtk_rover_config.yaml
data/: gap1_compression.csv  gap2_latency.csv  gap2_latency.csv.bak  gap2_latency_ascii_baseline.csv  gap3_field_test.csv  gap6_telemetry.csv  sample_beidou_message.json  sample_gnss_log.csv  sample_obstacle_map.yaml  sample_rtk_log.csv  sample_target_detection.json  task_status.json
docs/: NATIVE_PC_RUNBOOK.md  PIPELINE_ARCHITECTURE.md  architecture.md  dev_environment.md  environment_setup.md  team_roles.md  (+6 more)
ros2_ws/src/bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/bringup/config/: datum.yaml
ros2_ws/src/bringup/launch/: full_rescue.launch.py
ros2_ws/src/px4_msgs/: CMakeLists.txt  package.xml
(+187 files in other folders)
