<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Full-system launch files for the UAV Emergency Rescue System integration demo.</description>
  <maintainer email="tevinlemalasia254@gmail.com">Tevin Wills</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>beidou_short_message</exec_depend>
  <exec_depend>qgc_control</exec_depend>
  <exec_depend>path_planning</exec_depend>
  <exec_depend>rtk_positioning</exec_depend>
  <exec_depend>target_detection_tracking</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
